fixed mobile sized navbar and refreshing page while on mobile size

--- a/Personal Website/styles.css
+++ b/Personal Website/styles.css
@@ -96,6 +96,10 @@
     padding: 0;
 }
 
+.navbar-mobile {
+    padding: 5px 5px;
+}
+
 .navitem-bold {
     font-weight: bold;
 }
